--- a/src/Sug.Project.Environment/App_Config/Include/Project/SiteDefinitions.config
+++ b/src/Sug.Project.Environment/App_Config/Include/Project/SiteDefinitions.config
@@ -4,25 +4,22 @@
   xmlns:environment="http://www.sitecore.net/xmlconfig/environment"
   xmlns:role="http://www.sitecore.net/xmlconfig/role">
   <sitecore>
-    <services>
-      <configurator type="Sug.Configuration.ServicesConfigurator, Sug"/>
-    </services>
     <sites>
       <site name="custom_site"
-            hostName="cm.customsite.com"
+            hostName="www.customsite.com"
             patch:before="*[@name='website']"
             rootPath="/sitecore/content/custom-site"
             startItem="Home"
             inherits="website"/>
 
       <site name="custom_site"
-            set:hostName="www.customsite.com"
-            role:require="ContentDelivery or Standalone" />
+            set:hostName="cm.customsite.com"
+            role:require="(ContentManagement or Standalone) and !ContentDelivery" />
 
       <site name="custom_site"
             set:hostName="local.customsite.com"
             role:require="ContentDelivery or Standalone"
-            environment:require="Local" />
+            environment:require="local" />
 
       <site name="custom_site"
             set:hostName="qa.customsite.com"
@@ -32,7 +29,7 @@
       <site name="custom_site"
             set:hostName="qa-cm.customsite.com"
             role:require="(ContentManagement or Standalone) and !ContentDelivery"
-            environment:require="QA" />
+            environment:require="qa" />
     </sites>
   </sitecore>
 </configuration>
