--- a/src/Sug.Foundation.Rss/Sug.Foundation.Rss.csproj
+++ b/src/Sug.Foundation.Rss/Sug.Foundation.Rss.csproj
@@ -6,22 +6,23 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A7AEFB2B-422B-4174-BC39-C80E331BE367}</ProjectGuid>
+    <ProjectGuid>{BADE60BC-CF72-4486-9BDC-77C4748174D9}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sug.Feature.Configurations</RootNamespace>
-    <AssemblyName>Sug.Feature.Configurations</AssemblyName>
+    <RootNamespace>Sug.Foundation.Rss</RootNamespace>
+    <AssemblyName>Sug.Foundation.Rss</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44356</IISExpressSSLPort>
+    <IISExpressSSLPort>44338</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,93 +44,42 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sitecore\configurations.aspx" />
-    <Content Include="App_Config\Include\Feature\Configurations\RssFeeds.config">
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="App_Config\Include\Foundation\Rss\ServicesConfigurator.config" />
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\RssFeedSettings.cs" />
     <Compile Include="Configuration\ServicesConfigurator.cs" />
-    <Compile Include="Examples\MyClass1.cs" />
-    <Compile Include="Examples\MyClass2.cs" />
-    <Compile Include="Examples\MyClass3.cs" />
-    <Compile Include="Examples\MyClass4.cs" />
-    <Compile Include="Examples\MyClass5.cs" />
-    <Compile Include="Examples\MyClass6.cs" />
-    <Compile Include="Examples\MyClass7.cs" />
-    <Compile Include="Examples\MyClass8.cs" />
-    <Compile Include="Examples\MyClass9.cs" />
+    <Compile Include="IRssFeed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sitecore\configurations.aspx.cs">
-      <DependentUpon>configurations.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
+    <Compile Include="RssFeedReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
       <Version>2.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Sitecore.Kernel">
+    <PackageReference Include="sitecore.kernel">
       <Version>9.3.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\ServicesConfigurator.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass1.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass2.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass3.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass4.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass5.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass6.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass7.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass8.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Configurations\MyClass9.config">
-      <SubType>Designer</SubType>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Sug.Foundation.Rss\Sug.Foundation.Rss.csproj">
-      <Project>{bade60bc-cf72-4486-9bdc-77c4748174d9}</Project>
-      <Name>Sug.Foundation.Rss</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -145,7 +95,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:52830/</IISUrl>
+          <IISUrl>http://localhost:55695/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
