--- a/src/Sug.Project.Environment/web.config
+++ b/src/Sug.Project.Environment/web.config
@@ -32,7 +32,7 @@
     <add key="aspnet:RequestQueueLimitPerSession" value="25" />
 
     <!-- Custom environment variable -->
-    <add key="environment:define" value="Local" />
+    <add key="environment:define" value="local" />
 
     <!-- SUPPORTED SERVER ROLES     
          Specify the roles that you want this server to perform. A server can perform one or more roles. Enter the roles in a comma separated list. The supported roles are:
